@@ -12,7 +12,11 @@ this repository contains the full copyright notices and license terms. -->
     <field name="operation"/>
     <label name="work_center"/>
     <field name="work_center"/>
-    <field name="cycles" mode="form,tree" colspan="4"/>
+    <group id="buttons" colspan="4">
+        <button name="start" icon="tryton-launch"/>
+        <button name="stop" icon="tryton-ok"/>
+    </group>
+    <field name="cycles" colspan="4"/>
     <label id="empty" colspan="2"/>
     <label name="state"/>
     <field name="state"/>
