@@ -1,3 +1,5 @@
+* Add start and stop buttons on works
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Make work center not required on request and draft states
